--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8" />
 <title>Make a Fish</title>
 <style type="text/css">
-    /* Layout + background */
     html, body {
         height: 100%;
         margin: 0;
@@ -19,9 +18,8 @@
         background: linear-gradient(135deg, #a1c4fd 0%, #c2e9fb 40%, #e0f7fa 100%);
         color: #05386B;
         padding: 2rem;
+        min-height: 100vh;
     }
-
-    /* Container to center text and add subtle frosted panel */
     .container {
         text-align: center;
         padding: 2rem 2.5rem;
@@ -32,8 +30,6 @@
         max-width: 720px;
         width: 100%;
     }
-
-    /* Headings styling */
     h1 {
         color: #ff6b6b;
         font-size: 2.4rem;
@@ -51,10 +47,8 @@
         opacity: 0.95;
     }
 
-    /* Button styling */
     button {
         appearance: none;
-        -webkit-appearance: none;
         border: none;
         cursor: pointer;
         padding: 0.75rem 1.25rem;
@@ -65,6 +59,7 @@
         background: linear-gradient(90deg,#ffb86b 0%,#ff6b6b 100%);
         box-shadow: 0 8px 24px rgba(255,107,107,0.16);
         transition: transform 140ms ease, box-shadow 140ms ease, filter 140ms ease;
+        margin-top: 1rem;
     }
     button:hover {
         transform: translateY(-3px);
@@ -78,35 +73,176 @@
         outline: 3px solid rgba(255,107,107,0.18);
         outline-offset: 6px;
     }
+    /* Fish builder styles */
+    .fish-builder {
+        margin-top: 2rem;
+    }
+    .fish-parts {
+        display: flex;
+        justify-content: center;
+        gap: 2rem;
+        margin-bottom: 2rem;
+    }
+    .part-colors {
+        display: flex;
+        gap: 1rem;
+        margin-top: 0.5rem;
+        justify-content: center;
+    }
+    .color-swatch {
+        width: 38px;
+        height: 38px;
+        border-radius: 50%;
+        border: 3px solid transparent;
+        cursor: pointer;
+        box-shadow: 0 2px 6px rgba(20, 40, 80, 0.07);
+        transition: border-color 0.15s;
+    }
+    .color-swatch.selected {
+        border-color: #255b8d;
+        box-shadow: 0 2px 14px rgba(68, 153, 217, 0.16);
+    }
+    .fish-preview {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 2rem;
+    }
+    .svg-fish {
+        width: 200px;
+        height: 120px;
+    }
 </style>
 </head>
 <body>
-<div class="container">
+<div class="container" id="homePage">
     <h1>Make a fish</h1>
-
     <h2>Press Start to Begin</h2>
+    <button id="startBtn">START</button>
+</div>
 
-    <button id="submitPassword" onmouseover="changeColor(this)">
-       START
-    </button>
+<div class="container" id="fishBuilderPage" style="display: none;">
+    <h1>Design Your Fish</h1>
+    <div class="fish-builder">
+        <form id="fishForm">
+            <div class="fish-parts">
+                <div>
+                    <div><strong>Head Color:</strong></div>
+                    <div class="part-colors" id="headColors"></div>
+                </div>
+                <div>
+                    <div><strong>Body Color:</strong></div>
+                    <div class="part-colors" id="bodyColors"></div>
+                </div>
+                <div>
+                    <div><strong>Fin Color:</strong></div>
+                    <div class="part-colors" id="finColors"></div>
+                </div>
+            </div>
+            <button type="submit">SUBMIT</button>
+        </form>
+        <div class="fish-preview" id="fishPreview" style="display:none;">
+            <h2>Your Fish!</h2>
+            <div id="svgFish"></div>
+            <button type="button" id="makeAnotherBtn">Make another</button>
+        </div>
+    </div>
 </div>
 
 <script>
-    const submitPassword = document.getElementById('submitPassword');
-      submitPassword.addEventListener('click', () => {
-      const val = passwordInput.value.trim();
-      if (val === correctPassword) {
-        unlocked = true;
-        passwordBox.style.display = 'none';
-        plantSite.style.display = 'none';
-        hubSite.style.display = 'block';
-        isHubActive = true;
-      } else {
-        alert('Incorrect password.');
-        passwordInput.value = '';
-      }
+    // Color options
+    const headOptions = ['#f8c291', '#38ada9', '#6a89cc', '#f6b93b', '#b71540'];
+    const bodyOptions = ['#fa983a', '#60a3bc', '#82ccdd', '#0a3d62', '#e17055'];
+    const finOptions = ['#1e3799', '#e66767', '#b8e994', '#fed330', '#b2bec3'];
+
+    // Helper to create color swatches
+    function createSwatches(container, colors, groupName) {
+        container.innerHTML = '';
+        colors.forEach((clr, i) => {
+            const swatch = document.createElement('div');
+            swatch.className = 'color-swatch';
+            swatch.style.backgroundColor = clr;
+            swatch.dataset.value = clr;
+            swatch.setAttribute('title', clr);
+            swatch.setAttribute('tabindex', '0');
+            swatch.setAttribute('role', 'button');
+            // select first by default
+            if(i === 0) swatch.classList.add('selected');
+            swatch.addEventListener('click', () => {
+                Array.from(container.children).forEach(s=>s.classList.remove('selected'));
+                swatch.classList.add('selected');
+            });
+            swatch.addEventListener('keypress', (e) => {
+                if (e.key === "Enter" || e.key === " ") swatch.click();
+            });
+            container.appendChild(swatch);
+        });
+    }
+    // Initialization after DOM loaded
+    const startBtn = document.getElementById('startBtn');
+    const homePage = document.getElementById('homePage');
+    const fishBuilderPage = document.getElementById('fishBuilderPage');
+    const fishForm = document.getElementById('fishForm');
+
+    const headColors = document.getElementById('headColors');
+    const bodyColors = document.getElementById('bodyColors');
+    const finColors = document.getElementById('finColors');
+
+    createSwatches(headColors, headOptions, 'head');
+    createSwatches(bodyColors, bodyOptions, 'body');
+    createSwatches(finColors, finOptions, 'fin');
+
+    startBtn.addEventListener('click', () => {
+        homePage.style.display = 'none';
+        fishBuilderPage.style.display = 'block';
+    });
+
+    function getSelectedSwatch(container) {
+        const sel = container.querySelector('.selected');
+        return sel ? sel.dataset.value : null;
+    }
+
+    // Fish preview
+    const fishPreview = document.getElementById('fishPreview');
+    const svgFish = document.getElementById('svgFish');
+    const makeAnotherBtn = document.getElementById('makeAnotherBtn');
+
+    // SVG fish builder, simple!
+    function renderFishSVG(headColor, bodyColor, finColor) {
+        return `
+        <svg class="svg-fish" viewBox="0 0 200 120" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <!-- Body -->
+            <ellipse cx="110" cy="60" rx="70" ry="35" fill="${bodyColor}" stroke="#222" stroke-width="2"/>
+            <!-- Head -->
+            <ellipse cx="45" cy="60" rx="30" ry="25" fill="${headColor}" stroke="#222" stroke-width="2"/>
+            <!-- Top Fin -->
+            <polygon points="115,30 125,12 105,12" fill="${finColor}" stroke="#111" stroke-width="2"/>
+            <!-- Tail Fin -->
+            <polygon points="180,60 200,35 200,85" fill="${finColor}" stroke="#111" stroke-width="2"/>
+            <!-- Bottom Fin -->
+            <polygon points="105,90 125,110 115,80" fill="${finColor}" stroke="#111" stroke-width="2"/>
+            <!-- Eye -->
+            <circle cx="58" cy="63" r="5" fill="#fafafa" stroke="#333" stroke-width="1"/>
+            <circle cx="59" cy="64" r="2.1" fill="#333"/>
+        </svg>
+        `;
+    }
+
+    fishForm.addEventListener('submit', function(e) {
+        e.preventDefault();
+        const head = getSelectedSwatch(headColors);
+        const body = getSelectedSwatch(bodyColors);
+        const fin = getSelectedSwatch(finColors);
+
+        svgFish.innerHTML = renderFishSVG(head, body, fin);
+        fishPreview.style.display = '';
+        fishForm.style.display = 'none';
+    });
+
+    makeAnotherBtn.addEventListener('click', function(){
+        fishPreview.style.display = 'none';
+        fishForm.style.display = '';
     });
 </script>
 </body>
 </html>
-
